--- a/src/components/Visualizer.css
+++ b/src/components/Visualizer.css
@@ -101,3 +101,21 @@ label {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  height: auto;
+  width: auto;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
