--- a/src/components/Visualizer.css
+++ b/src/components/Visualizer.css
@@ -1,15 +1,22 @@
-input,
+/* input,
 label {
   display: block;
-}
+} */
 body {
   background-color: black;
+  font-family: 'Roboto Mono', monospace;
 }
-h1 {
+h1,
+h2,
+h3 {
   color: whitesmoke;
 }
 label {
   color: whitesmoke;
+}
+li {
+  font-weight: 900;
+  font-size: 16px;
 }
 
 /* BARS */
@@ -74,6 +81,20 @@ label {
 
 #bar-range:hover {
   opacity: 1;
+}
+
+/* RADIO */
+.radio-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.radio {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 30px;
 }
 
 /* FOR LATER */
@@ -160,3 +181,158 @@ label {
     transform: rotate(360deg);
   }
 }
+
+/* navbar */
+/* body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: linear-gradient(45deg, #ea4f4c 0%, #6d0019 100%);
+} */
+.signature {
+  font-style: italic;
+  font-size: 12px;
+  color: #212121;
+  padding-top: 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.signature:hover {
+  color: white;
+}
+
+.navigationWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: black;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  color: white;
+  text-transform: uppercase;
+  overflow: hidden;
+  width: auto;
+}
+
+.logoWrapper {
+  display: flex;
+}
+.stylish {
+  font-weight: bold;
+}
+
+.logo {
+  padding-left: 4px;
+  color: #ea4f4c;
+}
+
+.navigation {
+  display: flex;
+  list-style-type: none;
+}
+
+li {
+  opacity: 1;
+  list-style-type: none;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.parent {
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  color: white;
+}
+
+.link:hover {
+  color: #ea4f4c;
+}
+
+.fa-minus {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  left: -16px;
+  top: 3px;
+}
+
+.fa-plus {
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+
+.fas {
+  color: #ea4f4c;
+  margin: -2px 4px 0;
+  font-size: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.subnavigation {
+  display: none;
+  list-style-type: none;
+  width: 500px;
+  position: absolute;
+  top: 40%;
+  left: 25%;
+  margin: auto;
+  transition: all 0.3s ease-in-out;
+  background-color: #222;
+}
+
+li a {
+  font-size: 17px;
+  padding: 0 5px;
+}
+
+/* .active.parent {
+  transform: translate(-40px, -25px);
+  .link {
+    font-size: 12px;
+
+    .fa-minus {
+      opacity: 1 !important;
+      font-size: 8px;
+    }
+
+    .fa-plus {
+      opacity: 0 !important;
+    }
+  }
+
+  .subnavigation {
+    display: flex;
+  }
+}
+
+.active#clients {
+  .subnavigation {
+    transform: translate(-150px, 17px);
+  }
+}
+
+.active#services {
+  .subnavigation {
+    transform: translate(-290px, 17px);
+  }
+}
+
+.invisible {
+  opacity: 0 !important;
+  transform: translate(50px, 0);
+} */
