--- a/src/components/Visualizer.css
+++ b/src/components/Visualizer.css
@@ -87,6 +87,7 @@ li {
 .radio-container {
   display: flex;
   justify-content: space-around;
+  padding-top: 10px;
 }
 
 .radio {
@@ -183,156 +184,53 @@ li {
 }
 
 /* navbar */
-/* body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: linear-gradient(45deg, #ea4f4c 0%, #6d0019 100%);
-} */
-.signature {
-  font-style: italic;
-  font-size: 12px;
-  color: #212121;
-  padding-top: 15px;
-  transition: all 0.3s ease-in-out;
-}
-
-.signature:hover {
-  color: white;
-}
-
-.navigationWrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
+.navbar {
+  color: whitesmoke;
+  display: grid;
   justify-content: space-between;
-  padding: 20px;
-  background-color: black;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
-  color: white;
-  text-transform: uppercase;
-  overflow: hidden;
-  width: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 0 2rem 0 2rem;
+  font-size: larger;
+  text-align: center;
+  height: 5rem;
+  margin-top: 2rem;
+  max-width: 800px;
+  border-bottom: 4px solid whitesmoke;
+  margin-bottom: 20px;
 }
-
 .logoWrapper {
   display: flex;
 }
+
 .stylish {
   font-weight: bold;
+  color: whitesmoke;
+  font-size: 25px;
 }
 
 .logo {
   padding-left: 4px;
   color: #ea4f4c;
+  font-size: 25px;
 }
 
-.navigation {
-  display: flex;
-  list-style-type: none;
+.dropdown-container {
+  color: whitesmoke;
+}
+.dropdown-nav {
+  max-width: 150px;
+  margin-left: 20px;
+  margin-top: 8px;
+}
+.speed-nav {
+  max-width: 200px;
+}
+.num-bar-nav {
+  max-width: 200px;
 }
 
-li {
-  opacity: 1;
-  list-style-type: none;
-  color: white;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-}
-
-.parent {
-  padding: 0 10px;
-  cursor: pointer;
-}
-
-.link {
-  position: relative;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
+ul {
   color: white;
 }
 
-.link:hover {
-  color: #ea4f4c;
-}
-
-.fa-minus {
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-  position: absolute;
-  left: -16px;
-  top: 3px;
-}
-
-.fa-plus {
-  opacity: 1;
-  transition: all 0.3s ease-in-out;
-}
-
-.fas {
-  color: #ea4f4c;
-  margin: -2px 4px 0;
-  font-size: 10px;
-  transition: all 0.3s ease-in-out;
-}
-
-.subnavigation {
-  display: none;
-  list-style-type: none;
-  width: 500px;
-  position: absolute;
-  top: 40%;
-  left: 25%;
-  margin: auto;
-  transition: all 0.3s ease-in-out;
-  background-color: #222;
-}
-
-li a {
-  font-size: 17px;
-  padding: 0 5px;
-}
-
-/* .active.parent {
-  transform: translate(-40px, -25px);
-  .link {
-    font-size: 12px;
-
-    .fa-minus {
-      opacity: 1 !important;
-      font-size: 8px;
-    }
-
-    .fa-plus {
-      opacity: 0 !important;
-    }
-  }
-
-  .subnavigation {
-    display: flex;
-  }
-}
-
-.active#clients {
-  .subnavigation {
-    transform: translate(-150px, 17px);
-  }
-}
-
-.active#services {
-  .subnavigation {
-    transform: translate(-290px, 17px);
-  }
-}
-
-.invisible {
-  opacity: 0 !important;
-  transform: translate(50px, 0);
-} */
+/* dropdown */
