--- a/src/components/Visualizer.css
+++ b/src/components/Visualizer.css
@@ -111,7 +111,11 @@ li {
 
 /* BUTTONS */
 
-.myButton {
+.controls-container {
+  text-align: center;
+}
+
+/* .myButton {
   box-shadow: inset 0px 1px 0px 0px #ffffff;
   background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
   background-color: #f9f9f9;
@@ -134,12 +138,30 @@ li {
 .myButton:active {
   position: relative;
   top: 1px;
+} */
+
+.myButton {
+  background-color: black;
+  border: 2px solid whitesmoke;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.myButton:hover {
+  background-color: whitesmoke;
+  color: black;
+}
+.myButton:hover .arrow {
+  border: solid black;
 }
 
 /* ARROW BUTTONS */
 
 .arrow {
-  border: solid black;
+  border: solid whitesmoke;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
@@ -153,34 +175,6 @@ li {
 .left {
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
-}
-
-.up {
-  transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
-}
-
-.down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  height: auto;
-  width: auto;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 /* navbar */
@@ -201,21 +195,15 @@ li {
 .logoWrapper {
   display: flex;
 }
-
 .stylish {
   font-weight: bold;
   color: whitesmoke;
   font-size: 25px;
 }
-
 .logo {
   padding-left: 4px;
   color: #ea4f4c;
   font-size: 25px;
-}
-
-.dropdown-container {
-  color: whitesmoke;
 }
 .dropdown-nav {
   max-width: 150px;
@@ -228,9 +216,3 @@ li {
 .num-bar-nav {
   max-width: 200px;
 }
-
-ul {
-  color: white;
-}
-
-/* dropdown */
